--- a/SwiftDataAcquisition/Base.lproj/Main.storyboard
+++ b/SwiftDataAcquisition/Base.lproj/Main.storyboard
@@ -269,7 +269,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pop-sd-85p">
-                                <rect key="frame" x="20" y="58" width="374" height="485"/>
+                                <rect key="frame" x="20" y="58" width="374" height="488"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MyCell" id="6un-r3-aJu">
@@ -281,6 +281,9 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Wy-i7-mj8">
                                                     <rect key="frame" x="307" y="7" width="49" height="31"/>
+                                                    <connections>
+                                                        <action selector="ElementSwitchToggle:" destination="704-2P-t5E" eventType="valueChanged" id="1mc-Wz-gBf"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                             <constraints>
@@ -299,39 +302,52 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mmp-D2-dsZ">
-                                <rect key="frame" x="20" y="551" width="374" height="42"/>
+                                <rect key="frame" x="180" y="651" width="54" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <segue destination="aVI-7A-KfL" kind="unwind" unwindAction="handleExit:" id="adM-XI-waK"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gk-o2-A7p">
-                                <rect key="frame" x="20" y="601" width="374" height="42"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gk-o2-A7p">
+                                <rect key="frame" x="20" y="554" width="374" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Share"/>
+                                <connections>
+                                    <action selector="ShareBtnPressed:" destination="704-2P-t5E" eventType="touchDown" id="Wpg-IU-v8c"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-9h-Pta">
+                                <rect key="frame" x="20" y="601" width="374" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Delete">
+                                    <color key="titleColor" systemColor="systemRedColor"/>
+                                </state>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0wS-j1-PxI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0wS-j1-PxI" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Mmp-D2-dsZ" secondAttribute="trailing" constant="20" id="2Uw-Pw-8vW"/>
+                            <constraint firstItem="1gk-o2-A7p" firstAttribute="centerX" secondItem="0wS-j1-PxI" secondAttribute="centerX" id="5vQ-xI-lQ8"/>
+                            <constraint firstItem="0o2-9h-Pta" firstAttribute="centerX" secondItem="0wS-j1-PxI" secondAttribute="centerX" id="76C-HA-bu4"/>
+                            <constraint firstItem="Mmp-D2-dsZ" firstAttribute="centerX" secondItem="0wS-j1-PxI" secondAttribute="centerX" id="7ET-Jb-jEz"/>
+                            <constraint firstItem="1gk-o2-A7p" firstAttribute="top" secondItem="pop-sd-85p" secondAttribute="bottom" constant="8" symbolic="YES" id="7I2-8d-cso"/>
                             <constraint firstItem="0wS-j1-PxI" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="pop-sd-85p" secondAttribute="trailing" constant="20" id="9oB-6p-lrA"/>
-                            <constraint firstItem="Mmp-D2-dsZ" firstAttribute="top" secondItem="pop-sd-85p" secondAttribute="bottom" constant="8" symbolic="YES" id="LLU-ot-Qw3"/>
+                            <constraint firstItem="0wS-j1-PxI" firstAttribute="bottom" secondItem="Mmp-D2-dsZ" secondAttribute="bottom" constant="23" id="A92-f0-IsE"/>
                             <constraint firstItem="gRZ-8Y-KOx" firstAttribute="top" secondItem="0wS-j1-PxI" secondAttribute="top" constant="20" id="N5A-qV-4M2"/>
-                            <constraint firstItem="1gk-o2-A7p" firstAttribute="top" secondItem="Mmp-D2-dsZ" secondAttribute="bottom" constant="8" symbolic="YES" id="PYo-hk-ZxX"/>
-                            <constraint firstItem="Mmp-D2-dsZ" firstAttribute="leading" relation="lessThanOrEqual" secondItem="0wS-j1-PxI" secondAttribute="leading" constant="20" id="Xek-cL-85C"/>
                             <constraint firstItem="1gk-o2-A7p" firstAttribute="leading" secondItem="0wS-j1-PxI" secondAttribute="leading" constant="20" id="gHP-tH-zf9"/>
                             <constraint firstItem="0wS-j1-PxI" firstAttribute="trailing" secondItem="1gk-o2-A7p" secondAttribute="trailing" constant="20" id="gwx-yH-UaC"/>
                             <constraint firstItem="0wS-j1-PxI" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="gRZ-8Y-KOx" secondAttribute="trailing" constant="20" id="i4M-IF-DdT"/>
+                            <constraint firstItem="0o2-9h-Pta" firstAttribute="top" secondItem="1gk-o2-A7p" secondAttribute="bottom" constant="5" id="lpQ-Dm-bBa"/>
+                            <constraint firstItem="Mmp-D2-dsZ" firstAttribute="top" secondItem="0o2-9h-Pta" secondAttribute="bottom" constant="8" symbolic="YES" id="qhb-WC-APm"/>
                             <constraint firstItem="pop-sd-85p" firstAttribute="top" secondItem="gRZ-8Y-KOx" secondAttribute="bottom" constant="8" symbolic="YES" id="rmj-Hm-Tpk"/>
                             <constraint firstItem="gRZ-8Y-KOx" firstAttribute="leading" relation="lessThanOrEqual" secondItem="0wS-j1-PxI" secondAttribute="leading" constant="20" id="rpM-pl-Zz5"/>
                             <constraint firstItem="pop-sd-85p" firstAttribute="leading" relation="lessThanOrEqual" secondItem="0wS-j1-PxI" secondAttribute="leading" constant="20" id="vOi-Tp-aHk"/>
-                            <constraint firstItem="0wS-j1-PxI" firstAttribute="bottom" secondItem="1gk-o2-A7p" secondAttribute="bottom" constant="73" id="whc-57-6VM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0bA-Vr-d5F"/>
                     <connections>
+                        <outlet property="ShareBtn" destination="1gk-o2-A7p" id="qfz-Rb-M4t"/>
                         <outlet property="fileTable" destination="pop-sd-85p" id="yZT-Hk-mFw"/>
                     </connections>
                 </viewController>
@@ -352,6 +368,9 @@
                                 <rect key="frame" x="176.66666666666666" y="610" width="61" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="4t6-wH-Sna" kind="unwind" unwindAction="handleExit:" id="7Di-v1-zPf"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device IP:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="aXT-Xf-MvF">
                                 <rect key="frame" x="20" y="30" width="98" height="27.666666666666671"/>
@@ -377,22 +396,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="3Cv-vD-a1G">
-                                <rect key="frame" x="320" y="415" width="85" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Device wifi password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="Tbh-QL-1Zf">
                                 <rect key="frame" x="21" y="236" width="221" height="46"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time target:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="Bdd-GH-JCC">
-                                <rect key="frame" x="21" y="344" width="246" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -471,6 +476,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M3O-yM-cnG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="4t6-wH-Sna" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-2268.1159420289855" y="1192.663043478261"/>
         </scene>
@@ -521,6 +527,9 @@
         <image name="POLSL_LOGO" width="900" height="900"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
